[project]
name = "TargetFinance"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "YanMo", email = "xiajiaruimail@qq.com"},
]
dependencies = ["fastapi>=0.116.1", "uvicorn>=0.35.0", "yfinance>=0.2.65", "pandas>=2.3.1", "streamlit>=1.12.0"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
