[project]
name = "TargetFinance"
version = "0.0.1"
description = "A real-time financial data platform with AI-based company ranking for quantitative finance users."
authors = [
    {name = "YanMo", email = "xiajiaruimail@qq.com"},
]
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
    "pandas>=2.3.1",
    "streamlit>=1.12.0",
    "numpy>=1.22.4,<2.0",
    "scikit-learn==1.3.2",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.0",
    "aiohttp==3.9.1",
    "alpha-vantage==2.3.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
